--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@auth0/auth0-angular": "^1.10.0",
+    "@chrisoakman/chessboardjs": "^1.0.0",
+    "bootstrap": "^5.1.3",
+    "chess.ts": "^0.16.2",
+    "chessboardjs": "^0.0.1",
     "jest-editor-support": "*",
     "ngx-chess-board": "^2.2.1",
     "rxjs": "~7.5.0",
@@ -30,8 +35,9 @@
     "@angular-devkit/build-angular": "~13.3.6",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/chessboardjs": "^0.3.2",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
